--- a/src/sass/blocks/addProjects/_addProjects.scss
+++ b/src/sass/blocks/addProjects/_addProjects.scss
@@ -1,19 +1,17 @@
 .add-projects {
     overflow: hidden;
     // width: 30%;
-    margin-top: 69px;
 
     margin: 0 auto;
     padding: 30px 45px;
     
-
-
-
-   
-
-    
+    &__attach-file-label{
+        &:hover{
+            cursor: pointer;
+        }
+    }
     &__form {
-        margin-top: 30px;
+        margin-top: 100px;
     }
 
     &__input {
@@ -58,12 +56,7 @@
             font-size: 12px;
         }
 
-       
-        &__form {
-            margin-top: 25px;
-        }
-
-       
+     
 
         &__submit-btn {
             padding: 12px 0;
@@ -89,11 +82,8 @@
 @include rmin($desktop) {
     .add-projects {
         display: flex;
-        flex-direction: unset;
-        align-items: center;
-        width: 25%;
-        height: 89vh;
 
+        width: 50%;
         margin-top: unset;
         padding: unset;
 
