--- a/src/sass/blocks/projects-added/projects-added.scss
+++ b/src/sass/blocks/projects-added/projects-added.scss
@@ -1,16 +1,17 @@
 .projects-added {
     // overflow: hidden;
-    // width: 30%;
-    height: 100vh;
-    margin-top: 69px;
+    
 
     margin: 0 auto;
     padding: 30px 45px;
+    margin-top: 100px;
     
-  
+    
 
     &__project{
-        outline: 1px solid white;
+        box-shadow: 0px 5px 10px 2px rgba(255, 255, 255, 0.2);
+        padding: 10px;
+        margin-bottom: 20px;
     }
 
     &__title{
@@ -70,13 +71,12 @@
         }
 
         &__project{
-            width: 32%;
+            width: 47%;
 
             margin-top: 8px;
             margin-bottom: 8px;
             margin-right: 8px;
             margin-left: 8px;
-            outline: 1px solid white;
             
         }
      
