--- a/src/sass/blocks/header/_header.scss
+++ b/src/sass/blocks/header/_header.scss
@@ -4,7 +4,17 @@
     width: 100%;
 
     z-index: 1;
+    &__all-projects{
+        color: var(--text-color);
+        text-decoration: none;
 
+        margin-right: 20px;
+        font-size: 16px;
+
+        &:hover{
+            opacity: 0.5;
+        }
+    }
     &__login-link{
         font-size: 16px;
         padding: 15px;
